--- a/django-app/djangoproject/templates/game/create_page.html
+++ b/django-app/djangoproject/templates/game/create_page.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="card">
-    <h1>📄 Create New Page</h1>
+    <h1 style="display:flex; align-items:center; gap:8px;">
+            <img src="https://img.icons8.com/nolan/25/overview-pages-1.png" alt="overview-pages-1"/> Create New Page</h1>
     <p>Story: <strong>{{ story.title }}</strong></p>
 </div>
 
