--- a/django-app/djangoproject/templates/game/my_reports.html
+++ b/django-app/djangoproject/templates/game/my_reports.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="card">
-    <h1>📌 My Reports</h1>
+    <h1> My Reports</h1>
 
     {% if reports %}
         <ul>
