--- a/django-app/djangoproject/templates/game/reports_list.html
+++ b/django-app/djangoproject/templates/game/reports_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="card">
-    <h1>🚨 Reports Dashboard</h1>
+    <h1> Reports Dashboard</h1>
 
     {% if reports %}
         <table style="width:100%; border-collapse: collapse;">
